cor: some whitespaces removed; footer text added/corrected

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -12,13 +12,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    white-space: pre-line;
 
     article {
       width: 54%;
-    }
-
-    br {
-      display: none;
     }
   }
 
