--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -34,6 +34,12 @@
   a:focus:after {
     width: 80%;
   }
+
+  &__theme {
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 @media (max-width: 700px) {
